<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProyectoAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_menu_administrador">MenuAdministrador</string>
    <string name="tit">USUARIO</string>
    <string name="us">Nombre Usuario</string>
    <string name="pas">Password</string>
    <string name="Acep">Aceptar</string>
    <string name="Can">Cancelar</string>
    <string name="veri">.......................................................</string>
    <string name="AGR">Agregar</string>
    <string name="lis">Listar</string>
    <string name="admi">Administrador</string>
    <string name="Lid">Lider</string>
    <string name="title_activity_nuevo_usuario">NuevoUsuario</string>
    <string name="nom">Nombre Usuario</string>

</resources>
