<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblTitulo"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="22dp"
        android:text="@string/us" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblNombre"
        android:layout_below="@+id/lblNombre"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNombreUsuario"
        android:layout_below="@+id/txtNombreUsuario"
        android:text="@string/pas" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPassword"
        android:layout_below="@+id/lblPassword"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPass"
        android:layout_below="@+id/txtPass"
        android:text="@string/Acep" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAceptar"
        android:layout_alignBottom="@+id/btnAceptar"
        android:layout_alignRight="@+id/txtPass"
        android:text="@string/Can" />

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:layout_toRightOf="@+id/lblPassword"
        android:text="@string/tit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>